org.jgrapes.portal.bootstrap4/resources/org/jgrapes/portal/bootstrap4/portal.css
/* Activate close only on selected. */
#portalTabs .nav-link:not(.active) span {
    display: none;
}

/* Pop-up notifications. */
#notification-area {
	width: 90%;
	position: fixed;
	top: 0;
	left: 50%;
    margin-top: 1rem;
	margin-left: -45%;
	margin-right: -45%;
	z-index: 9999;
}

/* Spin while loading. */
#loader-overlay {
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background: rgba(0,0,0,0.5);
	
}

#loader-overlay div {
	border: 1.5vmin solid #007bff;
    border-top-color: #f7f7f700;
    border-radius: 50%;
    width: 10vmin;
    height: 10vmin;
    animation: spin 2s linear infinite;
    margin-left: auto;
    margin-right: auto;
    margin-top: 25vh;
}

@keyframes spin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
}

